--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     index index.php index.html;
+    server_name _;
+
     root /var/www/html/public;
 
     location / {
@@ -8,9 +10,14 @@ server {
     }
 
     location ~ \.php$ {
+        include snippets/fastcgi-php.conf;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+    }
+
+    location ~ /\.(?!well-known).* {
+        deny all;
     }
 }
